--- a/templates/email/invoice.html.twig
+++ b/templates/email/invoice.html.twig
@@ -57,7 +57,7 @@
     <tr>
         <td colspan="2" style="padding:15px;">
             <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;font-weight:bold;"><span style="display:block;font-size:13px;font-weight:normal;">
-                {{ order.$totalPrice() }}
+                <span style="display:block;font-weight:bold;font-size:13px">Total price: $</span>{{ order.totalPrice() }}
             </p>
         </td>
     </tr>
