--- a/templates/email/invoice.html.twig
+++ b/templates/email/invoice.html.twig
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color:#e2e1e0;font-family: Open Sans, sans-serif;font-size:100%;font-weight:400;line-height:1.4;color:#000;">
+<body style="background-color:hotpink;font-family: Open Sans, sans-serif;font-size:100%;font-weight:400;line-height:1.4;color:#000;">
 <table style="max-width:670px;margin:50px auto 10px;background-color:#fff;padding:50px;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;-webkit-box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);-moz-box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24); border-top: solid 10px green;">
     <thead>
     <tr>
@@ -57,7 +57,14 @@
     <tr>
         <td colspan="2" style="padding:15px;">
             <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;font-weight:bold;"><span style="display:block;font-size:13px;font-weight:normal;">
-                <span style="display:block;font-weight:bold;font-size:13px">Total price: $</span>{{ order.totalPrice() }}
+                <span style="font-weight:bold;font-size:13px">Shipping: </span>${{ order.getShoppingCost() }}
+            </p>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2" style="padding:15px;">
+            <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;font-weight:bold;"><span style="display:block;font-size:13px;font-weight:normal;">
+                <span style="font-weight:bold;font-size:13px">Total price: </span>${{ order.getTotalPrice() }}
             </p>
         </td>
     </tr>
