Add feature send mail then update status order

--- a/templates/email/invoice.html.twig
+++ b/templates/email/invoice.html.twig
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color:hotpink;font-family: Open Sans, sans-serif;font-size:100%;font-weight:400;line-height:1.4;color:#000;">
+<body style="background-color:whitesmoke;font-family: Open Sans, sans-serif;font-size:100%;font-weight:400;line-height:1.4;color:#000;">
 <table style="max-width:670px;margin:50px auto 10px;background-color:#fff;padding:50px;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;-webkit-box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);-moz-box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24); border-top: solid 10px green;">
     <thead>
     <tr>
@@ -15,13 +15,13 @@
         <td colspan="2" style="border: solid 1px #ddd; padding:10px 20px;">
             <p style="font-size:14px;margin:0 0 6px 0;"><span style="font-weight:bold;display:inline-block;min-width:150px">Order status</span>
                 {% if order.getStatus() == 1 %}
-                    <b style="color:yellow;font-weight:normal;margin:0">Pending</b>
+                    <b style="color:cadetblue;font-weight:normal;margin:0">PENDING</b>
                 {% elseif order.getStatus() == 2 %}
-                    <b style="color:green;font-weight:normal;margin:0">Approved</b>
+                    <b style="color:lawngreen;font-weight:normal;margin:0">APPROVED</b>
                 {% elseif order.getStatus() == 3 %}
-                    <b style="color:red;font-weight:normal;margin:0">Canceled</b>
+                    <b style="color:red;font-weight:normal;margin:0">CANCELED</b>
                 {% elseif order.getStatus() == 4 %}
-                    <b style="color:darkgreen;font-weight:normal;margin:0">Completed</b>
+                    <b style="color:darkgreen;font-weight:normal;margin:0">COMPLETED</b>
                 {% endif %}
             </p>
             <p style="font-size:14px;margin:0 0 6px 0;"><span style="font-weight:bold;display:inline-block;min-width:146px">Invoice ID</span> {{ order.getId() }}</p>
@@ -33,26 +33,29 @@
     <tr>
         <td style="width:50%;padding:20px;vertical-align:top">
             <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px">Name</span> {{ order.getRecipientName() }}</p>
-            <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px;">Email</span> {{ order.getRecipientEmail() }}</p>
-            <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px;">Phone</span> {{ order.getRecipientPhone() }}</p>
+            <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px;">Address</span>{{ order.getAddressDelivery() }}</p>
         </td>
         <td style="width:50%;padding:20px;vertical-align:top">
-            <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px;">Address</span>{{ order.getAddressDelivery() }}</p>
+            <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px;">Email</span> {{ order.getRecipientEmail() }}</p>
+            <p style="margin:0 0 10px 0;padding:0;font-size:14px;"><span style="display:block;font-weight:bold;font-size:13px;">Phone</span> {{ order.getRecipientPhone() }}</p>
         </td>
     </tr>
     <tr>
         <td colspan="2" style="font-size:20px;padding:30px 15px 0 15px;">Items</td>
     </tr>
     <tr>
-        <td colspan="2" style="padding:15px;">
-            {% for orderDetail in order.getOrderItems() %}
+        {% for orderDetail in order.getOrderItems() %}
+            <td colspan="2" style="padding:15px;">
+                <img src="{{ order.getGallery()[0] }}" alt="cover image" style="width: 100px; height: 100px; text-indent: -9999px;">
+            </td>
+            <td colspan="2">
                 <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;font-weight:bold;"><span style="display:block;font-size:13px;font-weight:normal;">
                         {{ orderDetail.getProductItem().getProduct().getName() }}</span>
                     <b style="font-size:12px;font-weight:300;">Quantity {{ orderDetail.getAmount() }} - </b>
                     <b style="font-size:12px;font-weight:300;"> ${{ orderDetail.getPrice() }}</b>
                 </p>
-            {% endfor %}
-        </td>
+            </td>
+        {% endfor %}
     </tr>
     <tr>
         <td colspan="2" style="padding:15px;">
