change email admin to feature send mail

--- a/templates/email/invoice.html.twig
+++ b/templates/email/invoice.html.twig
@@ -45,7 +45,7 @@
     </tr>
     <tr>
         {% for orderDetail in order.getOrderItems() %}
-            <td colspan="2">
+            <td colspan="2" style="padding:15px;">
                 <p style="font-size:14px;margin:0;padding:10px;border:solid 1px #ddd;font-weight:bold;"><span style="display:block;font-size:13px;font-weight:normal;">
                         {{ orderDetail.getProductItem().getProduct().getName() }}</span>
                     <b style="font-size:12px;font-weight:300;">Quantity {{ orderDetail.getAmount() }} - </b>
